--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="contact.html">Contact</a>
         <a href="skill.html">Skill</a>
         <a class="active" href="index.html">Home</a>
-        <a class="ko" href="index.html">Girl <sub><b>Rithika</b></sub></a>
+        <a class="ko" href="index.html"><sub><b>Rithika</b></sub></a>
       </div>
       <marquee>Personal site</marquee>
       <img src="8ec77355-ef99-4fd0-8596-e3121e4759a6.jpg" alt="My-img" width="30%" height="20%">
